fixed timeblock misalignment

--- a/public/css/timetable-theme1.css
+++ b/public/css/timetable-theme1.css
@@ -26,7 +26,6 @@
 }
 
 .timetable .table-cell {
-  box-sizing    : content-box;
   border-left   : 3px solid rgba(0,0,0,0.1);
   border-right  : 3px solid rgba(0,0,0,0.1);
   border-top    : 1px solid rgba(0,0,0,0.1);
@@ -34,13 +33,11 @@
 
 .timetable .time-block {
   /* background-color : lightblue; */
-  border: 1px solid rgba(50, 50, 50, 0.5);
-  border-radius: 0.25em;
-  /* border-right  : 1px solid rgba(0,0,0,0.1); */
-  /* border-left   : 1px solid rgba(0,0,0,0.1); */
-  /* border-top    : 2px solid white; */
-  /* border-bottom : 1px solid white; */
-  /* border           : 2px solid white; */
+  box-sizing    : content-box;
+  border        : none;
+  border-top    : 2px solid white;
+  border-bottom : 2px solid white;
+  border-radius : 0.25em;
 }
 
 .time-block-body {
